metadata/force-app/main/default/objects/Hubspot_Contacts__c/Hubspot_Contacts__c.object-meta.xml
<CustomObject>
    <label>Hubspot Contacts</label>
    <nameField>
        <label>Contact ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hubspot Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>