metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Average_Pageviews__c.field-meta.xml
<CustomField>
    <fullName>Average_Pageviews__c</fullName>
    <label>Average Pageviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>