metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Became_a_Subscriber_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_Subscriber_Date__c</fullName>
    <label>Became a Subscriber Date</label>
    <type>DateTime</type>
</CustomField>