metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Contact_owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_owner__c</fullName>
    <label>Contact owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>