metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <label>Email Domain</label>
    <type>Url</type>
</CustomField>