metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Event_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Event_Revenue__c</fullName>
    <label>Event Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>