metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/First_Conversion__c.field-meta.xml
<CustomField>
    <fullName>First_Conversion__c</fullName>
    <label>First Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>