metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/First_Page_Seen__c.field-meta.xml
<CustomField>
    <fullName>First_Page_Seen__c</fullName>
    <label>First Page Seen</label>
    <type>Url</type>
</CustomField>