metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/First_Referring_Site__c.field-meta.xml
<CustomField>
    <fullName>First_Referring_Site__c</fullName>
    <label>First Referring Site</label>
    <type>Url</type>
</CustomField>