metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/IP_Country__c.field-meta.xml
<CustomField>
    <fullName>IP_Country__c</fullName>
    <label>IP Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>armenia</fullName>
            </value>
            <value>
                <fullName>australia</fullName>
            </value>
            <value>
                <fullName>austria</fullName>
            </value>
            <value>
                <fullName>bangladesh</fullName>
            </value>
            <value>
                <fullName>belgium</fullName>
            </value>
            <value>
                <fullName>brazil</fullName>
            </value>
            <value>
                <fullName>bulgaria</fullName>
            </value>
            <value>
                <fullName>cambodia</fullName>
            </value>
            <value>
                <fullName>canada</fullName>
            </value>
            <value>
                <fullName>chile</fullName>
            </value>
            <value>
                <fullName>costa rica</fullName>
            </value>
            <value>
                <fullName>croatia</fullName>
            </value>
            <value>
                <fullName>cyprus</fullName>
            </value>
            <value>
                <fullName>czech republic</fullName>
            </value>
            <value>
                <fullName>denmark</fullName>
            </value>
            <value>
                <fullName>egypt</fullName>
            </value>
            <value>
                <fullName>el salvador</fullName>
            </value>
            <value>
                <fullName>ethiopia</fullName>
            </value>
            <value>
                <fullName>finland</fullName>
            </value>
            <value>
                <fullName>france</fullName>
            </value>
            <value>
                <fullName>germany</fullName>
            </value>
            <value>
                <fullName>greece</fullName>
            </value>
            <value>
                <fullName>india</fullName>
            </value>
            <value>
                <fullName>indonesia</fullName>
            </value>
            <value>
                <fullName>ireland</fullName>
            </value>
            <value>
                <fullName>israel</fullName>
            </value>
            <value>
                <fullName>italy</fullName>
            </value>
            <value>
                <fullName>kazakhstan</fullName>
            </value>
            <value>
                <fullName>kenya</fullName>
            </value>
            <value>
                <fullName>lithuania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>