metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/IP_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Country_Code__c</fullName>
    <label>IP Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>am</fullName>
            </value>
            <value>
                <fullName>at</fullName>
            </value>
            <value>
                <fullName>au</fullName>
            </value>
            <value>
                <fullName>bd</fullName>
            </value>
            <value>
                <fullName>be</fullName>
            </value>
            <value>
                <fullName>bg</fullName>
            </value>
            <value>
                <fullName>br</fullName>
            </value>
            <value>
                <fullName>ca</fullName>
            </value>
            <value>
                <fullName>ch</fullName>
            </value>
            <value>
                <fullName>cl</fullName>
            </value>
            <value>
                <fullName>cr</fullName>
            </value>
            <value>
                <fullName>cy</fullName>
            </value>
            <value>
                <fullName>cz</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>dk</fullName>
            </value>
            <value>
                <fullName>eg</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>et</fullName>
            </value>
            <value>
                <fullName>fi</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>gb</fullName>
            </value>
            <value>
                <fullName>gr</fullName>
            </value>
            <value>
                <fullName>hr</fullName>
            </value>
            <value>
                <fullName>id</fullName>
            </value>
            <value>
                <fullName>ie</fullName>
            </value>
            <value>
                <fullName>il</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>ke</fullName>
            </value>
            <value>
                <fullName>kh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>