metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/IP_State_CodeRegion_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_State_CodeRegion_Code__c</fullName>
    <label>IP State Code/Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>