metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/IP_StateRegion__c.field-meta.xml
<CustomField>
    <fullName>IP_StateRegion__c</fullName>
    <label>IP State/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>addis ababa</fullName>
            </value>
            <value>
                <fullName>al qahirah</fullName>
            </value>
            <value>
                <fullName>alabama</fullName>
            </value>
            <value>
                <fullName>almaty</fullName>
            </value>
            <value>
                <fullName>antwerpen</fullName>
            </value>
            <value>
                <fullName>ar riyad</fullName>
            </value>
            <value>
                <fullName>attiki</fullName>
            </value>
            <value>
                <fullName>baden-wurttemberg</fullName>
            </value>
            <value>
                <fullName>barcelona</fullName>
            </value>
            <value>
                <fullName>basel-stadt</fullName>
            </value>
            <value>
                <fullName>bayern</fullName>
            </value>
            <value>
                <fullName>belgrade</fullName>
            </value>
            <value>
                <fullName>benguet</fullName>
            </value>
            <value>
                <fullName>berlin</fullName>
            </value>
            <value>
                <fullName>bruxelles-capitale</fullName>
            </value>
            <value>
                <fullName>bucuresti</fullName>
            </value>
            <value>
                <fullName>california</fullName>
            </value>
            <value>
                <fullName>central</fullName>
            </value>
            <value>
                <fullName>cluj</fullName>
            </value>
            <value>
                <fullName>delhi</fullName>
            </value>
            <value>
                <fullName>dhaka</fullName>
            </value>
            <value>
                <fullName>florida</fullName>
            </value>
            <value>
                <fullName>gelderland</fullName>
            </value>
            <value>
                <fullName>georgia</fullName>
            </value>
            <value>
                <fullName>groningen</fullName>
            </value>
            <value>
                <fullName>gyeonggi-do</fullName>
            </value>
            <value>
                <fullName>hamburg</fullName>
            </value>
            <value>
                <fullName>harare</fullName>
            </value>
            <value>
                <fullName>hessen</fullName>
            </value>
            <value>
                <fullName>ho chi minh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>