metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/IP_Timezone__c.field-meta.xml
<CustomField>
    <fullName>IP_Timezone__c</fullName>
    <label>IP Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>