metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Last_Page_Seen__c.field-meta.xml
<CustomField>
    <fullName>Last_Page_Seen__c</fullName>
    <label>Last Page Seen</label>
    <type>Url</type>
</CustomField>