metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Last_Referring_Site__c.field-meta.xml
<CustomField>
    <fullName>Last_Referring_Site__c</fullName>
    <label>Last Referring Site</label>
    <type>Url</type>
</CustomField>