metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Hubspot Contacts</relationshipLabel>
    <relationshipName>Hubspot_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>