metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Legal_basis_for_processing_contacts_dat__c.field-meta.xml
<CustomField>
    <fullName>Legal_basis_for_processing_contacts_dat__c</fullName>
    <label>Legal basis for processing contact&apos;s dat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>