metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>