metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;250</fullName>
            </value>
            <value>
                <fullName>15000+</fullName>
            </value>
            <value>
                <fullName>2500-15000</fullName>
            </value>
            <value>
                <fullName>250-2500</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>