metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Number_of_times_contacted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_times_contacted__c</fullName>
    <label>Number of times contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>