metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Number_of_Unique_Forms_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unique_Forms_Submitted__c</fullName>
    <label>Number of Unique Forms Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>