metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Number_of_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visits__c</fullName>
    <label>Number of Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>