metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/OnBrand_Event_Speaker_Submission_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>OnBrand_Event_Speaker_Submission_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnBrand Event Speaker Submission Opt-In</label>
    <type>Checkbox</type>
</CustomField>