metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/OnBrand_Magazine_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>OnBrand_Magazine_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnBrand Magazine Email Opt-In</label>
    <type>Checkbox</type>
</CustomField>