metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/OnBrand_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>OnBrand_Subscriber__c</fullName>
    <label>OnBrand Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>