metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Original_Source_Drill_Down_1__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Drill_Down_1__c</fullName>
    <label>Original Source Drill-Down 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>