metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Owner_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_Date__c</fullName>
    <label>Owner Assigned Date</label>
    <type>DateTime</type>
</CustomField>