metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Recent_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion__c</fullName>
    <label>Recent Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>