metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Recent_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion_Date__c</fullName>
    <label>Recent Conversion Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>