metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Recent_Sales_Email_Replied_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Sales_Email_Replied_Date__c</fullName>
    <label>Recent Sales Email Replied Date</label>
    <type>DateTime</type>
</CustomField>