metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Sends_Since_Last_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Sends_Since_Last_Engagement__c</fullName>
    <label>Sends Since Last Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>