metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/StateRegion__c.field-meta.xml
<CustomField>
    <fullName>StateRegion__c</fullName>
    <label>State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>