metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Time_First_Seen__c.field-meta.xml
<CustomField>
    <fullName>Time_First_Seen__c</fullName>
    <label>Time First Seen</label>
    <type>DateTime</type>
</CustomField>