metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Time_Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>Time_Last_Seen__c</fullName>
    <label>Time Last Seen</label>
    <type>DateTime</type>
</CustomField>