metadata/force-app/main/default/objects/Hubspot_Contacts__c/fields/Time_of_First_Visit__c.field-meta.xml
<CustomField>
    <fullName>Time_of_First_Visit__c</fullName>
    <label>Time of First Visit</label>
    <type>DateTime</type>
</CustomField>