metadata/force-app/main/default/objects/Hubspot_Contacts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>OnBrand_Event_Email_Opt_In__c</columns>
    <columns>IP_City__c</columns>
    <columns>Number_of_Pageviews__c</columns>
    <columns>Legal_basis_for_processing_contacts_dat__c</columns>
    <columns>Time_of_Last_Visit__c</columns>
    <columns>Time_of_First_Visit__c</columns>
    <columns>Number_of_times_contacted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>